--- a/styles/small.css
+++ b/styles/small.css
@@ -2,15 +2,14 @@
 
 body {
     margin: 0 auto;
-    width: 450px;
+    width: 100%;
     font-family: 'Didact Gothic', 'Sarabun', sans-serif;
 }
 
 header{
     display: grid;
-    grid-template-columns: 125px 1fr;
-    grid-template-rows: 1fr;
-    border-radius: 8px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: center;
     text-align: center;
     background-color: rgb(183, 228, 246);
@@ -26,7 +25,6 @@ footer{
     text-align: center;
     background-color: rgb(183, 228, 246);
     padding: 10px;
-    border-radius: 8px;
 }
 
 img{
@@ -39,8 +37,8 @@ img{
 }
 
 h1{
-    grid-column: 2/3;
-    grid-row: 1/2;
+    grid-column: 1/2;
+    grid-row: 2/3;
     padding: 20px;
     color: rgb(4, 4, 104);
 }
