--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -45,10 +45,8 @@ main{
 }
 
 .back-section{
-    margin: 0% 18% 0%;
-    max-width: 900px;
     color: white;
-    padding: 2%;
+    padding: 4%;
     font-size: 20px;
     background-color: #0A6675;
     border-radius: 10px;
@@ -61,9 +59,10 @@ main{
     justify-content: center;
     align-items: center;
     height: 600px;
+    width: 80%;
     background-color: antiquewhite;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 90%;
 }
 .color-box{
     width: 120px;
