--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -15,7 +15,7 @@ header{
 }
 
 img{
-    border-radius: 5px;
+    border-radius: 7px;
 }
 
 #menu{
@@ -46,7 +46,6 @@ h3 {
 	right: 46%;
 }
 
-
 nav{
     margin-top: 25px;
     padding: 15px;
@@ -62,7 +61,7 @@ ul {
     padding: 10px;
     text-align: center;
     list-style-type: none;
-    border-bottom: 2px solid rgba(3, 54, 126, 0.2);
+    border-bottom: 1px solid #896244;
 }
 
 .nav-ul li:hover {
@@ -74,7 +73,6 @@ a{
     text-decoration: none;
     color: rgb(34, 42, 93);
 }
-
 
 #button{
     display: block;
@@ -110,16 +108,17 @@ a{
     justify-content: center;
     background-color: #0A6675;
     color: #ffffff;
-    margin: 0px 5px 10px 30px;
+    margin: 0px 5px 20px 30px;
+    padding: 5px;
     border-radius: 5px;
 
 }
 
-main {
-    padding: 15px;
+.container {
+    padding: 10px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
     gap: 5px;
 }
 
@@ -149,7 +148,13 @@ div {
 
 
 footer{
+    margin: 0 auto;
     padding: 10px;
+}
+
+#footer-img{
+    width: 70%;
+    object-fit: cover;
 }
 
 #info-footer{
@@ -165,5 +170,77 @@ footer{
 
 .copy{
     text-align: center;
+}
+
+
+#hero{
+    position: relative;
+}
+
+#montevideo-coast{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#welcome-title{
+    margin: 0;
+    padding: 20px;
+    position: absolute;
+    top: 0rem;
+    left: 1rem;
+}
+
+#weather{
+    text-align: center;
+}
+
+#weather-img{
+    width: 40%;
+    object-fit: cover;
+}
+
+#event{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#expo{
+    width: 60%;
+    object-fit: cover;
+}
+
+#new-release{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#join-us{
+    display: none;
+    border: 1px solid;
+    margin: 10px;
+    padding: 10px;
+    color: #ffffff;
+    border-radius: 8px;
+    background-color: #896244;
+    text-align: center;
+}
+
+#initiatives{
+    line-height: 30px;
+    background-color: #222a5d;
+    padding: 2px;
+}
+
+#spotlight-1{
+    text-align: center;
+}
+
+#restaurant{
+    width: 100%;
 }
 
