--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -37,11 +37,11 @@ h3 {
 }
 
 
-main {
-    grid-template-columns: 1fr 2fr 1fr;
+.container {
+    grid-template-columns: 1fr 4fr 1fr;
     grid-template-rows: repeat(3, 1fr);
-    height: 40rem;
-    width: 80%;
+    height: 70rem;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -70,6 +70,7 @@ main {
     grid-row: 3/4;
     grid-column: 1/2;
 }
+
 #event{
     grid-row: 1/2;
     grid-column: 1/2;
@@ -80,7 +81,13 @@ main {
     grid-column: 1/2;
 }
 
+footer{
+    width: 90%;
+}
 
+#footer-img{
+    width: 35%;
+}
 
 }
 
