--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 37.5em) {
 
-    main {
+    .container {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr;
     }
 
     #hero{
@@ -21,10 +21,25 @@
     }
     
     #join{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         grid-row: 3/4;
         grid-column: 1/4;
+        text-align: center;
+        padding: 20px;
     }
+
+    #join-button{
+        width: 10rem;
+        height: 3rem;
+        border-radius: 8px;
+        background-color: #065143;
+        color: #ffffff;
+        padding: 10px;
+    }
+
     #event{
         grid-row: 5/6;
         grid-column: 1/3;
@@ -38,6 +53,10 @@
     #info-footer{
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
+    }
+
+    #footer-img{
+        width: 60%;
     }
 
 }
