--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -16,6 +16,13 @@ header{
 
 img{
     border-radius: 7px;
+    max-width: 100%;
+    transition: opacity 0.5s;
+    opacity: 0;
+}
+
+img.loaded{
+    opacity: 1;
 }
 
 #menu{
@@ -181,6 +188,11 @@ footer{
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+}
+
+img.loaded {
+    opacity: 1;
 }
 
 #welcome-title{
