--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -124,6 +124,7 @@ a{
 .container {
     padding: 10px;
     display: grid;
+    max-height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
     gap: 5px;
@@ -184,7 +185,7 @@ footer{
     position: relative;
 }
 
-#montevideo-coast{
+#main_img_large{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -196,12 +197,28 @@ img.loaded {
 }
 
 #welcome-title{
-    margin: 0;
-    padding: 20px;
     position: absolute;
+    padding: 5px 10px;
     top: 0rem;
-    left: 1rem;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);;
+    color: #ffffff;
 }
+
+.label-overlay{
+    position: absolute;
+    top: 5rem;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 14px;
+    display: none;
+  }
+
+  .label-overlay.small {
+    display: block;
+  }
 
 #weather{
     text-align: center;
