--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -325,3 +325,66 @@ footer{
     color: black;
 }
 
+/*---------FORM-------------------*/
+
+form fieldset{
+    margin: 2rem 0;
+    border: 2px solid #222a5d;
+    border-radius: 10px;
+    padding: .5rem 2% 1rem;
+}
+
+form legend{
+    color: #896244;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top, form div{
+    display: block;
+    padding-top: 1rem;
+    color: #065143;
+}
+
+form label.top input, form label.top textarea{
+    display: block;
+    font-size: 1rem;
+    border: 1px solid #999;
+    border-radius: 5px;
+    padding: .75rem;
+    color: #555;
+    width: 85%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.side{
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+}
+
+form input.submitButton{
+    border: none;
+    background-color: #896244;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 1rem 2%;
+    width: 80%;
+    max-width: 20rem;
+}
+
+form label.top input:required{
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid{
+    border-left: green solid 6px;
+}
+
+#levels{
+    background-color: #ffffff;
+    color: black;
+    border: none;
+}
