--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -51,13 +51,6 @@ img.loaded {
     width: 35px;
 }
 
-h3 {
-    display: block;
-	position: absolute;
-	top: 140px;
-	right: 46%;
-}
-
 nav{
     margin-top: 25px;
     padding: 15px;
@@ -89,7 +82,7 @@ a{
 #button{
     display: block;
 	position: absolute;
-	top: 145px;
+	top: 150px;
 	right: 40px;
 	width: fit-content;
 	font-size: 1.5rem;
@@ -268,9 +261,10 @@ footer{
     box-sizing: border-box;
 }
 
-#discover-main{
+.center-main{
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 1000px;
+    text-align: center;
 }
 
 .discover-img-container{
@@ -396,4 +390,85 @@ form label.top input:required:valid{
     background-color: #ffffff;
     color: black;
     border: none;
+}
+
+
+
+/*--------------Directory page------------*/
+
+.directory-container{
+    margin: 2rem auto;
+    background-color: #896244;
+    max-width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.directory-container label{
+    font-size: 1.5rem;
+}
+
+.directory-container button{
+    width: 2rem;
+    height: 2.5rem;
+    font-size: 1.3rem;
+	padding: .3rem;
+    border: 2px solid;
+    border-radius: 5px;
+    border-color: #222a5d;
+	color: #0A6675;
+    margin: 1.5rem 1.5rem 1.5rem 0;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, minmax(0, 1fr));
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 2rem auto;
+    padding: 20px;
+    background-color: #0A6675;
+    border-radius: 7px;
+}
+
+.grid section{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-rows: 2fr 1fr 1fr 1fr;
+    border: 2px solid #896244;
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: #ffffff;
+    height: 210px;
+    line-height: 5px;
+}
+
+.grid img{
+    width: 100%;
+    max-width: 180px;
+    max-height: 80px;
+}
+
+.list img{
+    display: none;
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+}
+
+.list section:nth-child(even){
+    background-color: #d2edf1;
+}
+
+.list section{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
