--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -81,5 +81,10 @@
         grid-template-columns: 2fr 1fr 1fr 1fr;
     }
 
+    #city-data-container{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
 
 }
