--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -30,13 +30,6 @@ img.loaded {
     opacity: 1;
 }
 
-#menu{
-    background-color: #ffffff;
-    color: #222a5d;
-    border-color: #ffffff;
-    
-}
-
 .facebook{
     display: block;
     position: absolute;
@@ -82,8 +75,8 @@ a{
 #button{
     display: block;
 	position: absolute;
-	top: 150px;
-	right: 40px;
+	top: -20px;
+	right: -40px;
 	width: fit-content;
 	font-size: 1.5rem;
 	padding: .3rem;
@@ -91,6 +84,13 @@ a{
     border-radius: 8px;
     border-color: #222a5d;
 	color: #0A6675;
+}
+
+#menu{
+    background-color: #ffffff;
+    color: #222a5d;
+    border-color: #ffffff;
+    position: relative;
 }
 
 .nav-ul li {
@@ -117,7 +117,36 @@ a{
     padding: 5px;
     border-radius: 5px;
     border: 5px solid #065143;
+}
 
+#member-info{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 5px 20px 30px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 5px solid #065143;
+}
+
+.styled-member-gold{
+    background-color: rgb(245, 212, 127);
+    color: black;
+}
+
+.styled-member-silver{
+    background-color: grey;
+    color: #ffffff;
+}
+
+.styled-member-bronze{
+    background-color: #896244;
+    color: #ffffff;
+}
+
+#spotlight-sec-2{
+    display: none;
 }
 
 .container {
@@ -144,6 +173,23 @@ div {
     grid-template-rows: 0.5fr 0.5fr;
     padding: 10px;
     gap: 5px;
+}
+
+.styled-gold{
+    border: 10px solid rgb(245, 212, 127);
+}
+
+.styled-silver{
+    border: 10px solid grey;
+}
+
+.styled-bronze{
+    border: 10px solid #896244;
+}
+
+.styled-link{
+    color: #ffff;
+    text-decoration: underline;
 }
 
 #join{
@@ -188,6 +234,7 @@ footer{
     left: 10px;
     background-color: rgba(0, 0, 0, 0.7);;
     color: #ffffff;
+    width: 56%;
 }
 
 #weather{
@@ -235,31 +282,6 @@ footer{
     padding: 2px;
 }
 
-#spotlight-1{
-    position: relative;
-    padding: 0px;
-    max-width: 100%;
-}
-#spotlight-2{
-    position: relative;
-    padding: 0px;
-    max-width: 100%;
-}
-#spotlight-3{
-    display: none;
-    padding: 0px;
-} 
-
-.spotlight-text{
-    position: absolute;
-    padding: 5px 10px;
-    top: 0rem;
-    left: 0px;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);;
-    color: #ffffff;
-    box-sizing: border-box;
-}
 
 .discover-main{
     margin: 0 auto;
@@ -270,6 +292,16 @@ footer{
     margin: 0 auto;
     max-width: 1000px;
     text-align: center;
+}
+
+.join-main{
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+.contact-main{
+    margin: 0 auto;
+    max-width: 1000px;
 }
 
 .discover-img-container{
@@ -311,14 +343,13 @@ footer{
 #city-data-container{
     background-color: #ffffff;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
 }
 
 .montevideo-data{
-    text-align: center;
     color: black;
 }
 
@@ -334,6 +365,11 @@ footer{
 }
 
 /*---------FORM-------------------*/
+
+form{
+    max-width: 800px;
+    margin: 2rem;
+}
 
 form fieldset{
     margin: 2rem 0;
@@ -397,6 +433,9 @@ form label.top input:required:valid{
     border: none;
 }
 
+.join-application{
+    margin: 2rem;
+}
 
 
 /*--------------Directory page------------*/
@@ -476,4 +515,8 @@ form label.top input:required:valid{
     justify-content: center;
     align-items: center;
     padding: 10px;
+}
+
+.contact-info{
+    color: #ffdfc7;
 }
